RegressionTests/TestSuiteExport/reject/break_in_rep.blade
// EXPECT: fail
// DIAGNOSTICS: E0209

fn helper() {
    rep loop {
        break;
    }
}

cog task main() {
}